syntax = "proto3";

package testdata;

import "shared.proto";

option go_package = "gitlab.com/gitlab-org/gitaly/internal/middleware/cache/testdata";

message Request {
  gitaly.Repository destination = 1;
}

message Response{}

service TestService {
  rpc ClientStreamRepoMutator(Request) returns (stream Response) {
    option (gitaly.op_type) = {
      op: MUTATOR
      target_repository_field: "1"
    };
  }
  
  rpc ClientStreamRepoAccessor(Request) returns (stream Response) {
    option (gitaly.op_type) = {
      op: ACCESSOR
    };
  }
  
  rpc ClientUnaryRepoMutator(Request) returns (Response) {
    option (gitaly.op_type) = {
      op: MUTATOR
      target_repository_field: "1"
    };
  }
  
  rpc ClientUnaryRepoAccessor(Request) returns (Response) {
    option (gitaly.op_type) = {
      op: ACCESSOR
    };
  }
}
